--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.2.1",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-loader": "^15.9.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
